Fix audio player positioning on TV screen (small offset as the picture is cut off)

--- a/app/css/audio-player.css
+++ b/app/css/audio-player.css
@@ -1,3 +1,11 @@
+.overlayer {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top:0;
+    left:0;
+}
+
 .audio-pannel {
 	width: 407px;
 	/*height: 100px;*/
@@ -6,7 +14,7 @@
 	border-radius: 5px;
 	border: 1px solid #555;
 	position: absolute;
-	bottom: 0;
+	bottom: 20px;
 	left: 17%;
 	right: 17%;
 }
@@ -28,7 +36,7 @@
 	width: 45px;
 	height: 45px;
 	margin: 2px 7px;
-	background: url('app/imgs/audio-player.png');
+	background: url(../imgs/audio-player.png);
 }
 .play {
 	background-position: 0px 0px;
@@ -69,7 +77,7 @@
 .audio-bar-bg{
 	width: 236px;
 	height: 50px;
-	background: url(app/imgs/audio-player.png);
+	background: url(../imgs/audio-player.png);
 	position: relative;
 	top: -51px;
 	background-position: 0 50px;
